--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fade-in {
+  animation: animation-fade-in 0.5s;
+}
+
+@keyframes animation-fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(-50%);
+    height: 0%;
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0%);
+    height: 100%;
+  }
+}
