--- a/src/index.css
+++ b/src/index.css
@@ -3,32 +3,44 @@
 @tailwind components;
 @tailwind utilities;
 
-.fade-in {
-  animation: animation-fade-in 0.5s;
-}
-
-.overlay-in {
-  animation: overlay 0.3s forwards;
-}
-
-@keyframes animation-fade-in {
-  from {
-    opacity: 0;
-    transform: translateY(-50%);
-    height: 0%;
+@layer utilities {
+  ::-webkit-scrollbar {
+    width: 5px;
+    background: #a2a0a8;
   }
-  to {
-    opacity: 1;
-    transform: translateY(0%);
-    height: 100%;
+  
+  ::-webkit-scrollbar-thumb {
+    background: #474647;
+    border-radius: 10px;
   }
-}
-
-@keyframes overlay {
-  from {
-    background: transparent;
+  
+  .fade-in {
+    animation: animation-fade-in 0.5s;
   }
-  to {
-    background: rgba(0, 0, 0, 0.3);
+  
+  .overlay-in {
+    animation: overlay 0.3s forwards;
+  }
+  
+  @keyframes animation-fade-in {
+    from {
+      opacity: 0;
+      transform: translateY(-50%);
+      height: 0%;
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0%);
+      height: 100%;
+    }
+  }
+  
+  @keyframes overlay {
+    from {
+      background: transparent;
+    }
+    to {
+      background: rgba(0, 0, 0, 0.3);
+    }
   }
 }
